# OctoBiz

./: .gitignore  .tagpr  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  build.py  fontproject.toml  package.py  pyproject.toml
.github/actions/release/: action.yaml
.github/workflows/: ci.yml  lint.yml  release.yml  tagpr.yml
