# Python tooling configuration for the OctoBiz build script.
#
# NOTE: This project is NOT a Python package. build.py runs under FontForge's
# bundled Python (which provides the `fontforge` / `psMat` modules and cannot be
# installed from PyPI). uv here only manages dev tools (ruff, mypy).
# The font/release version is managed separately in fontproject.toml.

[project]
name = "octobiz"
version = "0.1.0"
description = "Build tooling for the OctoBiz font"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "mypy>=1.13",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

# fontforge / psMat are provided by the FontForge application, not PyPI, so they
# have no type stubs available to the type checker.
[[tool.mypy.overrides]]
module = ["fontforge", "psMat"]
ignore_missing_imports = true
